# aya-template

./: Cargo.toml  Makefile  cargo-generate.toml
{{project-name}}-ebpf/: Cargo.toml
{{project-name}}/src/: main.rs
